--- a/pages/homePage/notesPage.html
+++ b/pages/homePage/notesPage.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Note App :)</title>
     <link rel="stylesheet" href="/assets/Bootstrap/index.css" />
+    <script src="/assets/Bootstrap/index.js"></script>
     <style>
       * {
         font-family: sans-serif;
@@ -13,38 +14,33 @@
         background-color: #eef5ff;
       }
       header {
+        margin: 15px;
+        border-radius: 10px;
         background-color: #00275e;
-        padding: 20px;
+        padding: 13px;
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
+        /* justify-content: space-between; */
+        box-shadow: 0 1px 10px 5px rgba(0, 0, 0, 0.4);
+        transition: 0.2s ease;
         position: sticky;
         top: 0;
         left: 0;
         z-index: 999;
       }
+
+      .fixed {
+        margin: 0;
+        border-radius: 0;
+      }
+
       header > span {
         font-size: 20px;
         font-weight: bold;
         color: #fff;
       }
-      header > button {
-        font-size: 15px;
-        font-weight: bold;
-        color: #fff;
-        background-color: rgb(218, 0, 0);
-        border: none;
-        outline: none;
-        border-radius: 6px;
-        padding: 10px;
-        transition: 0.3s ease-in-out;
-        cursor: pointer;
-      }
-      header > button:hover {
-        background-color: rgb(189, 0, 0);
-      }
       .form-create-note {
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -153,8 +149,8 @@
         box-shadow: 0 0 40px 2px rgba(0, 0, 0, 0.1);
         padding: 20px;
         border-radius: 4px;
-        width: 80%;
-        max-width: 300px;
+        width: 100%;
+        max-width: 800px;
         font-size: 18px;
         text-align: center;
         color: #00275e;
@@ -168,44 +164,150 @@
     </style>
   </head>
   <body>
-    <header>
-      <span id="fullname">Hi sajad</span>
-      <button id="logout">logout</button>
+    <div
+      class="modal fade"
+      id="staticBackdrop"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">
+              write new note :)
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body p-0">
+            <div class="form-create-note">
+              <div class="mb-3 w-100">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="title"
+                  placeholder="Title"
+                />
+              </div>
+              <div class="w-100">
+                <textarea
+                  type="text"
+                  class="form-control"
+                  style="height: 150px;text-align: justify;"
+                  id="body"
+                  placeholder="Body"
+                ></textarea>
+              </div>
+              <span class="empty-error">empry</span>
+            </div>
+          </div>
+          <div class="modal-footer mt-3">
+            <button
+              id="add-note-btn"
+              type="button"
+              class="btn btn-primary w-100"
+            >
+              Add Note
+            </button>
+            <button
+              type="button"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+              class="btn btn-secondary w-100"
+            >
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <header id="header">
+      <span class="fs-5 me-2">Note App</span>
+      <div class="d-flex align-items-center">
+        <div class="dropdown">
+          <button
+          data-bs-offset="-77,15"
+          data-bs-auto-close="outside"
+            data-bs-toggle="dropdown"
+            id="avatar"
+            style="width: 40px; height: 40px"
+            class="bg-secondary me-2 border-0 rounded-circle d-flex align-items-center justify-content-center fs-3 text-white"
+          >
+            <span id="fullname-first-word"> S </span>
+          </button>
+          <ul style="width: 200px;word-wrap: break-word;" class="dropdown-menu dropdown-menu-start p-1" aria-labelledby="avatar">
+            <li class="p-2"><span id="show-fullname">sajad</span></li>
+            <li class="p-2"><span id="show-email">sajad@gmail.com</span></li>
+            <li><hr class="dropdown-divider"></li>
+            <li class="p-2">
+              <button id="logout" class="btn text-start text-danger p-0 w-100">
+                logout
+              </button>
+            </li>
+          </ul>
+        </div>
+        <button
+          type="button"
+          class="btn btn-primary me-2"
+          data-bs-toggle="modal"
+          data-bs-target="#staticBackdrop"
+        >
+          new note
+        </button>
+      </div>
     </header>
-
-    <div class="form-create-note">
-      <input class="input" id="title" type="text" placeholder="Title" />
-      <textarea
-        class="input"
-        id="body"
-        cols="30"
-        rows="5"
-        placeholder="Body"
-      ></textarea>
-      <button id="add-note-btn">Add Note</button>
-      <span class="empty-error">empry</span>
+    <div class="container" style="margin-bottom: 70px;">
+      <div class="row g-3 mt-2" id="notes"></div>
     </div>
-    <div class="container mb-3">
-      <div class="row g-3" id="notes"></div>
-    </div>
+    <footer
+    style="background-color: #00275e;color: #fff;
+    box-shadow: 0 -1px 10px 1px rgba(0, 0, 0, 0.3);
+    "
+      class="position-fixed w-100 bottom-0 d-flex align-items-center justify-content-center p-2"
+    >
+      <span class="fs-6">Create By Sajad Mehri © 2024</span>
+    </footer>
   </body>
 
   <script>
-    let token = document.cookie;
+    const token = document.cookie;
     if (!token) window.location.href = "/login";
-    let logoutBtn = document.getElementById("logout");
-    let fullname = document.getElementById("fullname");
-    let title = document.getElementById("title");
-    let body = document.getElementById("body");
-    let addNoteBtn = document.getElementById("add-note-btn");
-    let notesContainer = document.getElementById("notes");
-    let emptyError = document.querySelector(".empty-error");
+    const logoutBtn = document.getElementById("logout");
+    const fullname_first_word = document.getElementById("fullname-first-word");
+    const show_fullname = document.getElementById("show-fullname");
+    const show_email = document.getElementById("show-email");
+    const title = document.getElementById("title");
+    const body = document.getElementById("body");
+    const addNoteBtn = document.getElementById("add-note-btn");
+    const notesContainer = document.getElementById("notes");
+    const emptyError = document.querySelector(".empty-error");
+    const truck_modal = document.querySelector("#staticBackdrop");
+    const header = document.querySelector("#header");
 
     function delete_cookie(name) {
       if (document.cookie) {
         document.cookie = name + "=" + ";expires=Thu, 01 Jan 1970 00:00:01 GMT";
       }
     }
+
+    function hideFunc() {
+      const modal = bootstrap.Modal.getInstance(truck_modal);
+      modal.hide();
+    }
+
+    truck_modal.addEventListener("hide.bs.modal", () => {
+      title.value = "";
+      body.value = "";
+      emptyError.innerHTML = "";
+    });
+
     function parseJwt(token) {
       let base64Url = token.split(".")[1];
       let base64 = base64Url.replace(/-/g, "+").replace(/_/g, "/");
@@ -239,7 +341,7 @@
             let noteCard = "";
             data.forEach((note) => {
               noteCard = `
-            <div class="col-12 col-md-6">
+            <div class="col-12">
               <div class="notes-card">
              <div class="content">
               <span class="title">${note.title}</span>
@@ -278,6 +380,7 @@
                 getNotes();
                 title.value = "";
                 body.value = "";
+                hideFunc();
               });
               break;
 
@@ -333,7 +436,15 @@
 
     window.addEventListener("DOMContentLoaded", () => {
       getNotes();
-      fullname.innerHTML = `Welcome ${parseJwt(token).user.fullname}`;
+      show_fullname.innerHTML = parseJwt(token).user.fullname;
+      show_email.innerHTML = parseJwt(token).user.email;
+      let first_word = parseJwt(token).user.fullname.substring(0, 1);
+      fullname_first_word.innerHTML = first_word.toUpperCase();
+      if (window.scrollY > 0) {
+        header.classList.add("fixed");
+      } else {
+        header.classList.remove("fixed");
+      }
     });
 
     addNoteBtn.addEventListener("click", addNote);
@@ -341,6 +452,15 @@
     logoutBtn.addEventListener("click", () => {
       delete_cookie("userToken");
       window.location.href = "/login";
+      
+    });
+
+    window.addEventListener("scroll", (e) => {
+      if (window.scrollY > 0) {
+        header.classList.add("fixed");
+      } else {
+        header.classList.remove("fixed");
+      }
     });
   </script>
 </html>
