--- a/pages/loginPage/loginPage.html
+++ b/pages/loginPage/loginPage.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="/assets/Bootstrap/index.css" />
+    <link rel="stylesheet" href="/assets/Bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/Bootstrap/icons/bootstrap-icons.min.css" />
+    <script src="/assets/Bootstrap/bootstrap.bundle.min.js"></script>
     <style>
         * {
           font-family: sans-serif;
@@ -174,6 +176,7 @@
     </div>
     <div class="container">
       <div class="card">
+        <!-- <img src="../../assets/images/aylero.png" width="50%" alt=""> -->
         <span class="text">Welcome Back! ☻</span>
         <div class="field">
           <label for="email">Email<span>*</span></label>
