--- a/pages/registerPage/registerPage.html
+++ b/pages/registerPage/registerPage.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register Page</title>
-    <link rel="stylesheet" href="/assets/Bootstrap/index.css" />
+    <link rel="stylesheet" href="/assets/Bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/Bootstrap/icons/bootstrap-icons.min.css" />
+    <script src="/assets/Bootstrap/bootstrap.bundle.min.js"></script>
     <style>
       * {
         font-family: sans-serif;
