change font and show password button

--- a/pages/homePage/notesPage.html
+++ b/pages/homePage/notesPage.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Note App :)</title>
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    <link rel="stylesheet" href="/assets/styles/index.css">
+    <link rel="stylesheet" href="/assets/styles/notesPage.css">
     <link rel="stylesheet" href="/assets/Bootstrap/bootstrap.min.css" />
     <link
       rel="stylesheet"
@@ -10,150 +13,6 @@
     />
     <script src="/assets/Bootstrap/bootstrap.bundle.min.js"></script>
     <style>
-      * {
-        font-family: sans-serif;
-      }
-      body {
-        margin: 0;
-        background-color: #eef5ff;
-      }
-      header {
-        margin: 15px;
-        border-radius: 10px;
-        background-color: #00275e;
-        padding: 13px;
-        display: flex;
-        align-items: center;
-        /* justify-content: space-between; */
-        box-shadow: 0 1px 10px 5px rgba(0, 0, 0, 0.4);
-        transition: 0.2s ease;
-        position: sticky;
-        top: 0;
-        left: 0;
-        z-index: 999;
-      }
-
-      .fixed {
-        margin: 0;
-        border-radius: 0;
-      }
-
-      header > span {
-        font-size: 20px;
-        font-weight: bold;
-        color: #fff;
-      }
-      .form-create-note {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 20px;
-      }
-      .input {
-        background-color: #fff;
-        box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.2);
-        border: none;
-        outline: none;
-        border-radius: 5px;
-        padding: 12px;
-        margin-top: 10px;
-        width: 100%;
-        font-size: 17px;
-        max-width: 400px;
-      }
-      .form-create-note > button {
-        width: 100%;
-        background-color: #00275e;
-        border: none;
-        outline: none;
-        border-radius: 5px;
-        margin-top: 10px;
-        color: #fff;
-        padding: 10px;
-        cursor: pointer;
-        max-width: 400px;
-      }
-
-      .notes-card {
-        background-color: #00275e;
-        color: #fff;
-        border-radius: 5px;
-        display: flex;
-        width: 100%;
-        height: auto;
-        align-items: center;
-        justify-content: space-between;
-      }
-
-      .body-scroller {
-        background-color: #00275e;
-        border: 1px solid #eef5ff;
-        box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.2);
-        max-height: 190px;
-        padding: 14px;
-        border-radius: 5px;
-        overflow-y: auto;
-        width: 100%;
-      }
-      /* width */
-      .body-scroller::-webkit-scrollbar {
-        width: 6px;
-      }
-
-      /* Track */
-      .body-scroller::-webkit-scrollbar-track {
-        background: #f1f1f1;
-      }
-
-      /* Handle */
-      .body-scroller::-webkit-scrollbar-thumb {
-        background: #0044a3;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-      }
-
-      /* Handle on hover */
-      .body-scroller::-webkit-scrollbar-thumb:hover {
-        background: #0059d4;
-      }
-
-      .content {
-        display: flex;
-        flex-direction: column;
-        word-break: break-all;
-        margin-right: 15px;
-        margin: 20px;
-        width: 100%;
-      }
-      .content > .title {
-        font-size: 25px;
-        font-weight: bold;
-        margin-bottom: 7px;
-      }
-      .content > .body {
-        font-size: 17px;
-        color: #deedff;
-      }
-      .no-note {
-        background-color: rgba(0, 39, 94, 0.2);
-        border: 1px solid #00275e;
-        box-shadow: 0 0 40px 2px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        border-radius: 4px;
-        width: 100%;
-        max-width: 800px;
-        font-size: 18px;
-        text-align: center;
-        color: #00275e;
-      }
-      .empty-error {
-        color: rgb(209, 0, 0);
-        margin-top: 10px;
-        font-size: 16px;
-        display: none;
-      }
     </style>
   </head>
   <body>
@@ -284,190 +143,5 @@
     </footer>
   </body>
 
-  <script>
-    const token = document.cookie;
-    if (!token) window.location.href = "/login";
-    const logoutBtn = document.getElementById("logout");
-    const fullname_first_word = document.getElementById("fullname-first-word");
-    const show_fullname = document.getElementById("show-fullname");
-    const show_email = document.getElementById("show-email");
-    const title = document.getElementById("title");
-    const body = document.getElementById("body");
-    const addNoteBtn = document.getElementById("add-note-btn");
-    const notesContainer = document.getElementById("notes");
-    const emptyError = document.querySelector(".empty-error");
-    const truck_modal = document.querySelector("#staticBackdrop");
-    const header = document.querySelector("#header");
-
-    function delete_cookie(name) {
-      if (document.cookie) {
-        document.cookie = name + "=" + ";expires=Thu, 01 Jan 1970 00:00:01 GMT";
-      }
-    }
-
-    function hideFunc() {
-      const modal = bootstrap.Modal.getInstance(truck_modal);
-      modal.hide();
-    }
-
-    truck_modal.addEventListener("hide.bs.modal", () => {
-      title.value = "";
-      body.value = "";
-      emptyError.innerHTML = "";
-    });
-
-    function parseJwt(token) {
-      let base64Url = token.split(".")[1];
-      let base64 = base64Url.replace(/-/g, "+").replace(/_/g, "/");
-      let jsonPayload = decodeURIComponent(
-        window
-          .atob(base64)
-          .split("")
-          .map(function (c) {
-            return "%" + ("00" + c.charCodeAt(0).toString(16)).slice(-2);
-          })
-          .join("")
-      );
-
-      return JSON.parse(jsonPayload);
-    }
-
-    function getNotes() {
-      const URL = "http://127.0.0.1:8080/getNotesApi";
-      fetch(URL)
-        .then((res) => res.json())
-        .then((data) => {
-          if (data.reverse().length === 0) {
-            let notNoteElem = `
-            <div class="d-flex w-100 align-items-center justify-content-center">
-              <span class="no-note">Write a note to yourself right now ♥</span>
-            <div>
-            `;
-            notesContainer.innerHTML = notNoteElem;
-          } else {
-            notesContainer.innerHTML = "";
-            let noteCard = "";
-            data.forEach((note) => {
-              noteCard = `
-            <div class="col-12">
-              <div class="notes-card">
-             <div class="content">
-              <span class="title">${note.title}</span>
-              <div class="body-scroller">
-                <span class="body">${note.body.replace(/\n/g, "<br />")}</span>
-                </div>
-              </div>
-              <div class="delete">
-                <button class="fs-5 btn btn-danger me-3 p-2" onclick="deleteNote('${
-                  note.noteId
-                }')">
-                  <i class="bi bi-trash"></i>
-                </button>
-              </div>
-            </div>
-              </div>
-            `;
-              notesContainer.innerHTML += noteCard;
-            });
-          }
-        });
-    }
-
-    function addNote() {
-      const URL = "http://127.0.0.1:8080/createNoteApi";
-      if (title.value.trim() && body.value.trim()) {
-        emptyError.style.display = "none";
-        let noteObj = {
-          title: title.value.trim(),
-          body: body.value.trim(),
-        };
-        fetch(URL, {
-          method: "POST",
-          body: JSON.stringify(noteObj),
-        }).then((res) => {
-          switch (res.status) {
-            case 200:
-              res.text().then((data) => {
-                console.log(data);
-                getNotes();
-                title.value = "";
-                body.value = "";
-                hideFunc();
-              });
-              break;
-
-            case 403:
-              res.text().then((data) => {
-                console.log(data);
-              });
-              break;
-            default:
-              res.text().then((data) => {
-                console.log(data);
-              });
-              break;
-          }
-        });
-      } else {
-        console.log("empty");
-        emptyError.style.display = "block";
-        emptyError.innerHTML = "Title and Body is required";
-      }
-    }
-
-    function deleteNote(noteId) {
-      const URL = `http://127.0.0.1:8080/deleteNoteApi/${noteId}`;
-      fetch(URL, {
-        method: "DELETE",
-      }).then((res) => {
-        switch (res.status) {
-          case 200:
-            res.text().then((data) => {
-              console.log(data);
-              getNotes();
-            });
-            break;
-
-          case 403:
-            res.text().then((data) => {
-              console.log(data);
-            });
-            break;
-          default:
-            res.text().then((data) => {
-              console.log(data);
-            });
-            break;
-        }
-      });
-    }
-
-    window.addEventListener("DOMContentLoaded", () => {
-      getNotes();
-      show_fullname.innerHTML = parseJwt(token).user.fullname;
-      show_email.innerHTML = parseJwt(token).user.email;
-      let first_word = parseJwt(token).user.fullname.substring(0, 1);
-      fullname_first_word.innerHTML = first_word.toUpperCase();
-      if (window.scrollY > 0) {
-        header.classList.add("fixed");
-      } else {
-        header.classList.remove("fixed");
-      }
-    });
-
-    addNoteBtn.addEventListener("click", addNote);
-
-    logoutBtn.addEventListener("click", () => {
-      delete_cookie("userToken");
-      window.location.href = "/login";
-    });
-
-    window.addEventListener("scroll", (e) => {
-      if (window.scrollY > 0) {
-        header.classList.add("fixed");
-      } else {
-        header.classList.remove("fixed");
-      }
-    });
-  </script>
+  <script src="/assets/js/notesPage.js"></script>
 </html>
