--- a/pages/registerPage/registerPage.html
+++ b/pages/registerPage/registerPage.html
@@ -3,170 +3,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register Page</title>
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    <link rel="stylesheet" href="/assets/styles/index.css">
+    <link rel="stylesheet" href="/assets/styles/registerPage.css">
     <link rel="stylesheet" href="/assets/Bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/Bootstrap/icons/bootstrap-icons.min.css" />
+    <link
+      rel="stylesheet"
+      href="/assets/Bootstrap/icons/bootstrap-icons.min.css"
+    />
     <script src="/assets/Bootstrap/bootstrap.bundle.min.js"></script>
-    <style>
-      * {
-        font-family: sans-serif;
-      }
-      body {
-        margin: 0;
-        background-color: #eef5ff;
-      }
-
-      .container {
-        background-color: #eef5ff;
-        display: flex;
-        align-items: start;
-        justify-content: center;
-        padding: 5rem 0 5rem 0;
-      }
-      .card {
-        background-color: #7c93c3;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 20px;
-        border-radius: 15px;
-        width: min(80%, 400px);
-      }
-      .field {
-        display: flex;
-        flex-direction: column;
-        margin: 10px;
-        width: 100%;
-      }
-
-      .field > label {
-        font-size: 16px;
-        color: #eef5ff;
-      }
-
-      .field > label > span {
-        color: rgb(211, 0, 0);
-        margin-left: 5px;
-      }
-
-      .field > input {
-        padding: 10px;
-        outline: none;
-        border-radius: 5px;
-        border: none;
-        box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
-        margin-top: 5px;
-        width: 100%;
-        background-color: #eef5ff;
-        font-size: 16px;
-      }
-
-      .submit-btn {
-        width: 100%;
-      }
-
-      .submit-btn > button {
-        margin-top: 15px;
-        background-color: #9eb8d9;
-        padding: 10px;
-        border: none;
-        outline: none;
-        color: #fff;
-        font-size: 17px;
-        width: 100%;
-        border-radius: 5px;
-        box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
-        cursor: pointer;
-      }
-      .submit-btn > button:disabled {
-        background-color: #6f7f94;
-        color: #aaaaaa;
-        cursor: default;
-      }
-
-      .text {
-        font-size: 24px;
-        color: #eef5ff;
-        font-weight: bold;
-        margin-bottom: 10px;
-      }
-
-      .error {
-        margin-top: 6px;
-        margin-left: 2px;
-        font-size: 14px;
-        color: rgb(153, 0, 0);
-        display: none;
-        font-weight: bold;
-      }
-
-      .go-link {
-        width: 100%;
-        margin-top: 14px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .go-link > a {
-        margin-left: 5px;
-        text-decoration: none;
-        color: #00275e;
-        font-weight: bold;
-      }
-      .go-link > span {
-        color: #fff;
-      }
-      .toast-s {
-        display: flex;
-        position: fixed;
-        top: -200px;
-        right: 20px;
-        background-color: #00275e;
-        border-radius: 7px;
-        color: #eef5ff;
-        font-size: 17px;
-        box-shadow: 0 5px 20px 2px rgba(0, 0, 0, 0.2);
-      }
-      .toast-s > span {
-        margin: 18px;
-      }
-      .toast-s > button {
-        margin: 12px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: transparent;
-        border: none;
-        color: #eef5ff;
-        font-size: 20px;
-        cursor: pointer;
-      }
-
-      .show {
-        animation: showToast 0.3s forwards linear;
-      }
-      .hide {
-        animation: hideToast 0.3s forwards linear;
-      }
-
-      @keyframes showToast {
-        0% {
-          top: -200px;
-        }
-        100% {
-          top: 20px;
-        }
-      }
-      @keyframes hideToast {
-        0% {
-          top: 20px;
-        }
-        100% {
-          top: -200px;
-        }
-      }
-    </style>
   </head>
   <body>
     <div class="toast-s">
@@ -174,7 +19,7 @@
       <button>X</button>
     </div>
     <div class="container">
-      <div class="card">
+      <div class="card-resigter">
         <div style="display: flex; width: 100%">
           <span class="text"
             >Hi there☻<br />
@@ -193,12 +38,18 @@
         </div>
         <div class="field">
           <label for="password">Password<span>*</span></label>
-          <input type="password" id="password" />
+          <div class="field-passsword">
+            <input type="password" id="password" />
+            <i id="show-password" class="bi bi-eye-slash fs-5"></i>
+          </div>
           <span id="password-error" class="error">a field is required</span>
         </div>
         <div class="field">
           <label for="confirm-password">Confirm Password<span>*</span></label>
-          <input type="password" id="confirm-password" />
+          <div class="field-passsword">
+            <input type="password" id="confirm-password" />
+            <i id="show-confirm-password" class="bi bi-eye-slash fs-5"></i>
+          </div>
           <span id="confirm-password-error" class="error"
             >a field is required</span
           >
@@ -214,138 +65,5 @@
     </div>
   </body>
 
-  <script>
-    let fullname = document.getElementById("fullname");
-    let email = document.getElementById("email");
-    let password = document.getElementById("password");
-    let confirm_password = document.getElementById("confirm-password");
-    let register_btn = document.getElementById("register-btn");
-    let fullname_error = document.getElementById("fullname-error");
-    let email_error = document.getElementById("email-error");
-    let password_error = document.getElementById("password-error");
-    let confirm_password_error = document.getElementById(
-      "confirm-password-error"
-    );
-
-    let toast = document.querySelector(".toast-s");
-    let toastMsg = document.querySelector(".toast-s > span");
-    let toastBtn = document.querySelector(".toast-s > button");
-    var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
-
-    function validationForm() {
-      if (!fullname.value) {
-        fullname_error.style.display = "block";
-        fullname_error.innerHTML = "fullname is required.";
-      } else {
-        fullname_error.style.display = "none";
-      }
-      if (!email.value) {
-        email_error.style.display = "block";
-        email_error.innerHTML = "Email is required.";
-      } else {
-        email_error.style.display = "none";
-      }
-      if (!password.value) {
-        password_error.style.display = "block";
-        password_error.innerHTML = "Password is required.";
-      } else {
-        password_error.style.display = "none";
-      }
-      if (!confirm_password.value) {
-        confirm_password_error.style.display = "block";
-        confirm_password_error.innerHTML = "Confirm Password is required.";
-      } else {
-        confirm_password_error.style.display = "none";
-      }
-      if (password.value !== confirm_password.value) {
-        confirm_password_error.style.display = "block";
-        confirm_password_error.innerHTML =
-          "Password and Confirm Password Not Match";
-      }
-      if (email.value &&!email.value.match(mailformat)) {
-        email_error.style.display = "block";
-        email_error.innerHTML = "The Email is not valid";
-      }
-
-      if (
-        fullname.value &&
-        email.value &&
-        password.value &&
-        confirm_password.value &&
-        password.value === confirm_password.value &&
-        email.value.match(mailformat)
-      ) {
-        register_btn.setAttribute("disabled", true);
-        fullname_error.style.display = "none";
-        email_error.style.display = "none";
-        password_error.style.display = "none";
-        confirm_password_error.style.display = "none";
-
-        let userObj = {
-          fullname: fullname.value,
-          email: email.value,
-          password: password.value,
-        };
-        const URL = "http://127.0.0.1:8080/registerApi";
-        fetch(URL, {
-          method: "POST",
-          body: JSON.stringify(userObj),
-        }).then((res) => {
-          switch (res.status) {
-            case 200:
-              res.text().then((data) => {
-                console.log(data);
-                openToast(data, "green");
-                register_btn.removeAttribute("disabled");
-                setTimeout(() => {
-                  window.location.href = "/login";
-                }, 1000);
-              });
-              break;
-
-            case 403:
-              res.text().then((data) => {
-                console.log(data);
-                email_error.style.display = "block";
-                email_error.innerHTML = data;
-                register_btn.removeAttribute("disabled");
-              });
-              break;
-            default:
-              res.text().then((data) => {
-                console.log(data);
-                openToast(data, "yellow");
-                register_btn.removeAttribute("disabled");
-              });
-              break;
-          }
-        });
-      }
-    }
-
-    function closeToast() {
-      toast.classList.remove("show");
-      toast.classList.add("hide");
-    }
-    function openToast(msg, color) {
-      toast.classList.remove("hide");
-      toast.classList.add("show");
-      toast.style.backgroundColor = color;
-      toastMsg.innerHTML = msg;
-      setTimeout(() => {
-        toast.classList.remove("show");
-        toast.classList.add("hide");
-      }, 3000);
-    }
-
-    toastBtn.addEventListener("click", closeToast);
-
-    register_btn.addEventListener("click", validationForm);
-    window.addEventListener("DOMContentLoaded", () => {
-      let token = document.cookie;
-      if (token.split("=")[1]) {
-        window.location.href = "/notes";
-      }
-    });
-  </script>
+  <script src="/assets/js/registerPage.js"></script>
 </html>
